Beautify CSS. Remove nomq (MediaQuery) css. 'Fix' program selector

--- a/data/program-selector.html
+++ b/data/program-selector.html
@@ -17,7 +17,7 @@
    </head>
  <body>
 
-  <div class="breakpoint active" id="bp_infinity" data-min-width="961"><!-- responsive breakpoint node -->
+  <div class="breakpoint active" id="bp_infinity" ><!-- responsive breakpoint node -->
    <div class="clearfix" id="page"><!-- column -->
     <a class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u963-4" href="index.html" data-content-guid="u963-4_content"><!-- content --><p id="u963-2">LOG OUT</p></a>
     <div class="clearfix colelem shared_content" id="u999-4" data-content-guid="u999-4_content"><!-- content -->
@@ -31,41 +31,6 @@
     <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="660" data-content-below-spacer="18"></div>
    </div>
   </div>
-  <div class="breakpoint" id="bp_960" data-min-width="741" data-max-width="960"><!-- responsive breakpoint node -->
-   <div class="clearfix temp_no_id" data-orig-id="page"><!-- column -->
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u963-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u999-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u311-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u840-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u864-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u888-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u987-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="660" data-content-below-spacer="22"></div>
-   </div>
-  </div>
-  <div class="breakpoint" id="bp_740" data-min-width="321" data-max-width="740"><!-- responsive breakpoint node -->
-   <div class="clearfix temp_no_id" data-orig-id="page"><!-- column -->
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u963-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u999-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u311-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u840-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u864-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u888-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u987-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="660" data-content-below-spacer="20"></div>
-   </div>
-  </div>
-  <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
-   <div class="clearfix temp_no_id" data-orig-id="page"><!-- column -->
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u963-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u999-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u311-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u840-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u864-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u888-4_content"><!-- placeholder node --></span>
-    <span class="nonblock nontext rounded-corners clearfix colelem placeholder" data-placeholder-for="u987-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="659" data-content-below-spacer="19"></div>
-   </div>
   </div>
   <!-- Other scripts -->
   <!-- RequireJS script -->
