Add global data reading

--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -8,6 +8,8 @@
    
   <title>Global Settings</title>
   <!-- CSS -->
+  <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
+  <script type="text/javascript" src="scripts/global-settings.js"></script>
   <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
   <link rel="stylesheet" type="text/css" href="css/global-settings.css?crc=3833088082" id="pagesheet"/>
  </head>
@@ -31,7 +33,9 @@
         <p id="u1787-2">HOME</p>
        </div>
        <div class="clearfix grpelem" id="u1788-4"><!-- content -->
-        <p id="u1788-2">write</p>
+        <p id="u1788-2">
+         <input class ="clearfix grpelem" type="number" id="global_home">
+        </p>
        </div>
       </div>
      </div>
@@ -44,7 +48,9 @@
         <p id="u1789-2">END</p>
        </div>
        <div class="clearfix grpelem" id="u1790-4"><!-- content -->
-        <p id="u1790-2">write</p>
+        <p id="u1790-2">
+          <input class ="clearfix grpelem" type="number" id="global_end">
+        </p>
        </div>
       </div>
      </div>
@@ -60,7 +66,9 @@
            <p id="u1791-2">TURN 1</p>
           </div>
           <div class="clearfix grpelem" id="u1792-4"><!-- content -->
-           <p id="u1792-2">write</p>
+           <p id="u1792-2">
+             <input class ="clearfix grpelem" type="number" id="global_turn1">
+           </p>
           </div>
          </div>
         </div>
@@ -73,7 +81,9 @@
            <p id="u1793-2">TURN 2</p>
           </div>
           <div class="clearfix grpelem" id="u1794-4"><!-- content -->
-           <p id="u1794-2">write</p>
+           <p id="u1794-2">
+             <input class ="clearfix grpelem" type="number" id="global_turn2">
+           </p>
           </div>
          </div>
         </div>
@@ -97,7 +107,9 @@
            <p id="u2009-2">MAX ACC</p>
           </div>
           <div class="clearfix grpelem" id="u2030-4"><!-- content -->
-           <p id="u2030-2">write</p>
+           <p id="u2030-2">
+             <input class ="clearfix grpelem" type="number" id="global_maxAcc">
+           </p>
           </div>
          </div>
         </div>
@@ -110,7 +122,9 @@
            <p id="u2048-2">MAX DEC</p>
           </div>
           <div class="clearfix grpelem" id="u2057-4"><!-- content -->
-           <p id="u2057-2">write</p>
+           <p id="u2057-2">
+             <input class ="clearfix grpelem" type="number" id="global_maxDec">
+           </p>
           </div>
          </div>
         </div>
@@ -126,7 +140,9 @@
         <p id="u2075-2">FMIN</p>
        </div>
        <div class="clearfix grpelem" id="u2084-4"><!-- content -->
-        <p id="u2084-2">write</p>
+        <p id="u2084-2">
+          <input class ="clearfix grpelem" type="number" id="global_maxSpeed">
+        </p>
        </div>
       </div>
      </div>
@@ -139,7 +155,9 @@
         <p id="u2102-2">FMIN</p>
        </div>
        <div class="clearfix grpelem" id="u2111-4"><!-- content -->
-        <p id="u2111-2">write</p>
+        <p id="u2111-2">
+          <input class ="clearfix grpelem" type="number" id="global_homingSpeed">
+        </p>
        </div>
       </div>
      </div>
@@ -160,7 +178,8 @@
            <p id="u2352-2">MAX TIME</p>
           </div>
           <div class="clearfix grpelem" id="u2351-4"><!-- content -->
-           <p id="u2351-2">write</p>
+           <p id="u2351-2"></p>
+             <input class ="clearfix grpelem" type="number" id="global_maxTime">
           </div>
          </div>
         </div>
@@ -176,7 +195,8 @@
            <p id="u2446-2">MAX LAPS</p>
           </div>
           <div class="clearfix grpelem" id="u2447-4"><!-- content -->
-           <p id="u2447-2">write</p>
+           <p id="u2447-2"></p>
+            <input class ="clearfix grpelem" type="number" id="global_maxLaps">
           </div>
          </div>
         </div>
@@ -197,7 +217,8 @@
            <p id="u2612-2">SERVICE MODE</p>
           </div>
           <div class="clearfix grpelem" id="u2611-4"><!-- content -->
-           <p id="u2611-2">write</p>
+           <p id="u2611-2"></p>
+            <input class ="clearfix grpelem" type="number" id="global_servSpeed">
           </div>
          </div>
         </div>
