--- a/data/program-selector.html
+++ b/data/program-selector.html
@@ -33,19 +33,19 @@
     <div class="clearfix colelem shared_content" id="u999-4" data-content-guid="u999-4_content"><!-- content -->
       <p id="u999-2">SYSTEM STATUS</p>
       <div style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4"><!-- content -->
-          <p>Mode:</p>
+          <p>Mode: </p>
           <p id="status_mode">mode_val</p>
       </div>
       <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1201-4"><!-- content -->
-        <p>Completed laps:</p>
+        <p>Completed laps: </p>
        <p id="status_completed_laps">laps_val</p>
       </div>
       <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4"><!-- content -->
-        <p>Current Position:</p>
+        <p>Current Position: </p>
        <p id="status_position">position_val</p>
       </div>
       <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4"><!-- content -->
-        <p>System Status</p>
+        <p>System Status: </p>
        <p id="status_system_status">system status_val</p>
       </div>
      </div>
