Fix global setting layout. Implement settings reception

--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -223,7 +223,7 @@
          </div>
         </div>
         <div class="rounded-corners clearfix colelem shared_content" id="u2657-4" data-content-guid="u2657-4_content"><!-- content -->
-         <p id="u2657-2">SET</p>
+         <p id="u2657-2" onclick="save_global_settings()">SET</p>
         </div>
         <div class="rounded-corners clearfix colelem shared_content" id="u2684-4" data-content-guid="u2684-4_content"><!-- content -->
          <p id="u2684-2">SYSTEM LOGS</p>
