Change value definitions

--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -49,7 +49,7 @@
        </div>
        <div class="clearfix grpelem" id="u1790-4"><!-- content -->
         <p id="u1790-2">
-          <input class ="clearfix grpelem" type="number" id="global_end">
+          <input class ="clearfix grpelem" type="number" id="global_max_end">
         </p>
        </div>
       </div>
@@ -59,7 +59,7 @@
        <div class="clearfix" id="u3133_align_to_page">
         <div class="clearfix colelem shared_content" id="u2156" data-content-guid="u2156_content"><!-- column -->
          <div class="clearfix colelem" id="u1797-4"><!-- content -->
-          <p>TURN 1 ( 20 M )</p>
+          <p>MAX TURN 1 ( 20 M )</p>
          </div>
          <div class="clearfix colelem" id="pu1791-4"><!-- group -->
           <div class="clearfix grpelem" id="u1791-4"><!-- content -->
@@ -67,14 +67,14 @@
           </div>
           <div class="clearfix grpelem" id="u1792-4"><!-- content -->
            <p id="u1792-2">
-             <input class ="clearfix grpelem" type="number" id="global_turn1">
+             <input class ="clearfix grpelem" type="number" id="global_max_turn1">
            </p>
           </div>
          </div>
         </div>
         <div class="clearfix colelem shared_content" id="u2162" data-content-guid="u2162_content"><!-- column -->
          <div class="clearfix colelem" id="u1798-4"><!-- content -->
-          <p>TURN 2 ( 110 M )</p>
+          <p>MIN TURN 2 ( 110 M )</p>
          </div>
          <div class="clearfix colelem" id="pu1793-4"><!-- group -->
           <div class="clearfix grpelem" id="u1793-4"><!-- content -->
@@ -82,7 +82,7 @@
           </div>
           <div class="clearfix grpelem" id="u1794-4"><!-- content -->
            <p id="u1794-2">
-             <input class ="clearfix grpelem" type="number" id="global_turn2">
+             <input class ="clearfix grpelem" type="number" id="global_min_turn2">
            </p>
           </div>
          </div>
