--- a/data/global-settings.html
+++ b/data/global-settings.html
@@ -41,7 +41,7 @@
      </div>
      <div class="clearfix colelem shared_content" id="u2150" data-content-guid="u2150_content"><!-- column -->
       <div class="clearfix colelem" id="u1796-4"><!-- content -->
-       <p>END LIMIT ( 120.0 M )</p>
+       <p>MAX END ( 120.0 M )</p>
       </div>
       <div class="clearfix colelem" id="pu1789-4"><!-- group -->
        <div class="clearfix grpelem" id="u1789-4"><!-- content -->
