--- a/data/novice.html
+++ b/data/novice.html
@@ -14,24 +14,34 @@
   <link rel="stylesheet" type="text/css" href="css/novice.css?crc=357694059" id="pagesheet"/>
 </head>
  <body>
+  <p id="mode_id" style="display: none">novice</p>
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="961"><!-- responsive breakpoint node -->
    <div class="clearfix" id="page"><!-- column -->
-    <a class="nonblock nontext clip_frame colelem shared_content" id="u1231" href="program-selector.html" data-content-guid="u1231_content"><!-- svg --><img class="svg temp_no_img_src" id="u1227" data-orig-src="images/left-arrow.svg?crc=391656077" width="75" height="75" alt="" data-mu-svgfallback="images/left%20arrow_poster_.png?crc=184332363" src="images/blank.gif?crc=4208392903"/></a>
+    <a class="nonblock nontext clip_frame colelem shared_content" id="u1231" href="program-selector.html" data-content-guid="u1231_content"><!-- svg --><img class="svg" id="u1227" data-orig-src="images/left-arrow.svg?crc=391656077" width="75" height="75" alt="" data-mu-svgfallback="images/left%20arrow_poster_.png?crc=184332363" src="images/blank.gif?crc=4208392903"/></a>
     <div class="clearfix colelem shared_content" id="u1083-4" data-content-guid="u1083-4_content"><!-- content -->
      <p id="u1083-2">NOVICE</p>
     </div>
+	<div class="clearfix colelem shared_content" id="u1247-4" data-content-guid="u1247-4_content"><!-- content -->
+     <p>SPEED ( CURRENT SETTINGS )</p>
+    </div>
+    <div class="clearfix colelem shared_content" id="pu1077-4" data-content-guid="pu1077-4_content"><!-- group -->
+     <div class="clearfix grpelem" id="u1077-4"><!-- content -->
+      <p id="u1077-2">SPEED</p>
+     </div>
+     <div class="clearfix grpelem" id="u1188-4"><!-- content -->
+      <p id="u1188-2"><input class ="clearfix grpelem" type="number" id="mode_speed"></p>
+     </div>
+    </div>
     <div class="clearfix colelem shared_content" id="u1247-4" data-content-guid="u1247-4_content"><!-- content -->
-     <p>END TURNING POINT ( CURRENT SETTINGS )
-      <input class ="clearfix grpelem" type="number" id="mode_end">
-     </p>
+     <p>END TURNING POINT ( CURRENT SETTINGS )</p>
     </div>
     <div class="clearfix colelem shared_content" id="pu1077-4" data-content-guid="pu1077-4_content"><!-- group -->
      <div class="clearfix grpelem" id="u1077-4"><!-- content -->
       <p id="u1077-2">END</p>
      </div>
      <div class="clearfix grpelem" id="u1188-4"><!-- content -->
-      <p id="u1188-2">write</p>
+      <p id="u1188-2"><input class ="clearfix grpelem" type="number" id="mode_turn1"></p>
      </div>
     </div>
     <div class="clearfix colelem shared_content" id="u1265-4" data-content-guid="u1265-4_content"><!-- content -->
@@ -42,7 +52,7 @@
       <p id="u1079-2">ACC</p>
      </div>
      <div class="clearfix grpelem" id="u1200-4"><!-- content -->
-      <p id="u1200-2">write</p>
+      <p id="u1200-2"><input class ="clearfix grpelem" type="number" id="mode_acc"></p>
      </div>
     </div>
     <div class="clearfix colelem shared_content" id="u1289-4" data-content-guid="u1289-4_content"><!-- content -->
@@ -53,7 +63,7 @@
       <p id="u1080-2">DEC</p>
      </div>
      <div class="clearfix grpelem" id="u1209-4"><!-- content -->
-      <p id="u1209-2">write</p>
+      <p id="u1209-2"><input class ="clearfix grpelem" type="number" id="mode_dec"></p>
      </div>
     </div>
     <div class="clearfix colelem shared_content" id="u1301-4" data-content-guid="u1301-4_content"><!-- content -->
@@ -64,11 +74,11 @@
       <p id="u1081-2">TURN 2</p>
      </div>
      <div class="clearfix grpelem" id="u1218-4"><!-- content -->
-      <p id="u1218-2">write</p>
+      <p id="u1218-2"><input class ="clearfix grpelem" type="number" id="mode_turn2"></p>
      </div>
     </div>
     <div class="rounded-corners clearfix colelem shared_content" id="u1082-4" data-content-guid="u1082-4_content"><!-- content -->
-     <p id="u1082-2 onclick="save_mode_settings()">SET</p>
+     <p id="u1082-2" onclick="save_mode_values()">SET</p>
     </div>
     <div class="verticalspacer" data-offset-top="662" data-content-above-spacer="662" data-content-below-spacer="18"></div>
    </div>
@@ -121,7 +131,6 @@
     <div class="verticalspacer" data-offset-top="581" data-content-above-spacer="581" data-content-below-spacer="102"></div>
    </div>
   </div>
-  <p id="mode_id" style="display: none">novice</p>
   <!-- Other scripts -->
   </body>
 </html>
