--- a/data/novice.html
+++ b/data/novice.html
@@ -22,61 +22,79 @@
     <div class="clearfix colelem shared_content" id="u1083-4" data-content-guid="u1083-4_content"><!-- content -->
      <p id="u1083-2">NOVICE</p>
     </div>
-	<div class="clearfix colelem shared_content" id="u1247-4" data-content-guid="u1247-4_content"><!-- content -->
-     <p>SPEED ( CURRENT SETTINGS )</p>
+	  
+    <div class="clearfix colelem shared_content" id="u1247-4" data-content-guid="u1247-4_content"><!-- content -->
+      <p>SPEED ( CURRENT SETTINGS )</p>
     </div>
     <div class="clearfix colelem shared_content" id="pu1077-4" data-content-guid="pu1077-4_content"><!-- group -->
-     <div class="clearfix grpelem" id="u1077-4"><!-- content -->
-      <p id="u1077-2">SPEED</p>
-     </div>
-     <div class="clearfix grpelem" id="u1188-4"><!-- content -->
-      <p id="u1188-2"><input class ="clearfix grpelem" type="number" id="mode_speed"></p>
-     </div>
+      <div class="clearfix grpelem" id="u1077-4"><!-- content -->
+        <p id="u1077-2">SPEED</p>
+      </div>
+      <div class="clearfix grpelem" id="u1188-4"><!-- content -->
+        <p id="u1188-2"><input class ="clearfix grpelem" type="number" id="mode_speed"></p>
+      </div>
     </div>
+
     <div class="clearfix colelem shared_content" id="u1247-4" data-content-guid="u1247-4_content"><!-- content -->
      <p>END TURNING POINT ( CURRENT SETTINGS )</p>
     </div>
     <div class="clearfix colelem shared_content" id="pu1077-4" data-content-guid="pu1077-4_content"><!-- group -->
-     <div class="clearfix grpelem" id="u1077-4"><!-- content -->
-      <p id="u1077-2">END</p>
-     </div>
-     <div class="clearfix grpelem" id="u1188-4"><!-- content -->
-      <p id="u1188-2"><input class ="clearfix grpelem" type="number" id="mode_turn1"></p>
-     </div>
+      <div class="clearfix grpelem" id="u1077-4"><!-- content -->
+        <p id="u1077-2">TURN1</p>
+      </div>
+      <div class="clearfix grpelem" id="u1188-4"><!-- content -->
+        <p id="u1188-2"><input class ="clearfix grpelem" type="number" id="mode_turn1"></p>
+      </div>
     </div>
-    <div class="clearfix colelem shared_content" id="u1265-4" data-content-guid="u1265-4_content"><!-- content -->
-     <p>ACCELERATION M/S ( CURRENT SETTINGS )</p>
-    </div>
-    <div class="clearfix colelem shared_content" id="pu1079-4" data-content-guid="pu1079-4_content"><!-- group -->
-     <div class="clearfix grpelem" id="u1079-4"><!-- content -->
-      <p id="u1079-2">ACC</p>
-     </div>
-     <div class="clearfix grpelem" id="u1200-4"><!-- content -->
-      <p id="u1200-2"><input class ="clearfix grpelem" type="number" id="mode_acc"></p>
-     </div>
-    </div>
-    <div class="clearfix colelem shared_content" id="u1289-4" data-content-guid="u1289-4_content"><!-- content -->
-     <p>DECELERATION M/S ( CURRENT SETTINGS )</p>
-    </div>
-    <div class="clearfix colelem shared_content" id="pu1080-4" data-content-guid="pu1080-4_content"><!-- group -->
-     <div class="clearfix grpelem" id="u1080-4"><!-- content -->
-      <p id="u1080-2">DEC</p>
-     </div>
-     <div class="clearfix grpelem" id="u1209-4"><!-- content -->
-      <p id="u1209-2"><input class ="clearfix grpelem" type="number" id="mode_dec"></p>
-     </div>
-    </div>
+
     <div class="clearfix colelem shared_content" id="u1301-4" data-content-guid="u1301-4_content"><!-- content -->
-     <p>BRAKE TIME ( CURRENT SETTINGS )</p>
+      <p>NEAR TURNING POINT ( CURRENT SETTINGS )</p>
     </div>
     <div class="clearfix colelem shared_content" id="pu1081-4" data-content-guid="pu1081-4_content"><!-- group -->
-     <div class="clearfix grpelem" id="u1081-4"><!-- content -->
-      <p id="u1081-2">TURN 2</p>
-     </div>
-     <div class="clearfix grpelem" id="u1218-4"><!-- content -->
-      <p id="u1218-2"><input class ="clearfix grpelem" type="number" id="mode_turn2"></p>
-     </div>
+      <div class="clearfix grpelem" id="u1081-4"><!-- content -->
+        <p id="u1081-2">TURN 2</p>
+      </div>
+      <div class="clearfix grpelem" id="u1218-4"><!-- content -->
+        <p id="u1218-2"><input class ="clearfix grpelem" type="number" id="mode_turn2"></p>
+      </div>
     </div>
+
+    <div class="clearfix colelem shared_content" id="u1301-4" data-content-guid="u1301-4_content"><!-- content -->
+      <p>BRAKE TIME S ( CURRENT SETTINGS )</p>
+    </div>
+    <div class="clearfix colelem shared_content" id="pu1081-4" data-content-guid="pu1081-4_content"><!-- group -->
+      <div class="clearfix grpelem" id="u1081-4"><!-- content -->
+        <p id="u1081-2">BRAKE</p>
+      </div>
+      <div class="clearfix grpelem" id="u1218-4"><!-- content -->
+        <p id="u1218-2"><input class ="clearfix grpelem" type="number" id="mode_brake_time"></p>
+      </div>
+    </div>
+
+    <div class="clearfix colelem shared_content" id="u1265-4" data-content-guid="u1265-4_content"><!-- content -->
+      <p>ACCELERATION M/S ( CURRENT SETTINGS )</p>
+    </div>
+    <div class="clearfix colelem shared_content" id="pu1079-4" data-content-guid="pu1079-4_content"><!-- group -->
+      <div class="clearfix grpelem" id="u1079-4"><!-- content -->
+        <p id="u1079-2">ACC</p>
+      </div>
+      <div class="clearfix grpelem" id="u1200-4"><!-- content -->
+        <p id="u1200-2"><input class ="clearfix grpelem" type="number" id="mode_acc"></p>
+      </div>
+    </div>
+
+    <div class="clearfix colelem shared_content" id="u1289-4" data-content-guid="u1289-4_content"><!-- content -->
+      <p>DECELERATION M/S ( CURRENT SETTINGS )</p>
+    </div>
+    <div class="clearfix colelem shared_content" id="pu1080-4" data-content-guid="pu1080-4_content"><!-- group -->
+      <div class="clearfix grpelem" id="u1080-4"><!-- content -->
+        <p id="u1080-2">DEC</p>
+      </div>
+      <div class="clearfix grpelem" id="u1209-4"><!-- content -->
+        <p id="u1209-2"><input class ="clearfix grpelem" type="number" id="mode_dec"></p>
+      </div>
+    </div>
+    
     <div class="rounded-corners clearfix colelem shared_content" id="u1082-4" data-content-guid="u1082-4_content"><!-- content -->
      <p id="u1082-2" onclick="save_mode_values()">SET</p>
     </div>
