Combine CSS for different modes. Update mode pages to correc data

--- a/data/novice.html
+++ b/data/novice.html
@@ -10,10 +10,10 @@
   <!-- CSS -->
   <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
   <script type="text/javascript" src="scripts/mode-settings.js"></script>
-  <link rel="stylesheet" type="text/css" href="css/site_global.css?crc=444006867"/>
-  <link rel="stylesheet" type="text/css" href="css/novice.css?crc=357694059" id="pagesheet"/>
+  <link rel="stylesheet" type="text/css" href="css/site_global.css"/>
+  <link rel="stylesheet" type="text/css" href="css/mode.css" id="pagesheet"/>
 </head>
- <body>
+ <body id="novice">
   <p id="mode_id" style="display: none">novice</p>
 
   <div class="breakpoint active" id="bp_infinity" data-min-width="961"><!-- responsive breakpoint node -->
@@ -99,54 +99,6 @@
      <p id="u1082-2" onclick="save_mode_values()">SET</p>
     </div>
     <div class="verticalspacer" data-offset-top="662" data-content-above-spacer="662" data-content-below-spacer="18"></div>
-   </div>
-  </div>
-  <div class="breakpoint" id="bp_960" data-min-width="741" data-max-width="960"><!-- responsive breakpoint node -->
-   <div class="clearfix temp_no_id" data-orig-id="page"><!-- column -->
-    <span class="nonblock nontext clip_frame colelem placeholder" data-placeholder-for="u1231_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1083-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1247-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1077-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1265-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1079-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1289-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1080-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1301-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1081-4_content"><!-- placeholder node --></span>
-    <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u1082-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="660" data-content-below-spacer="19"></div>
-   </div>
-  </div>
-  <div class="breakpoint" id="bp_740" data-min-width="321" data-max-width="740"><!-- responsive breakpoint node -->
-   <div class="clearfix temp_no_id" data-orig-id="page"><!-- column -->
-    <span class="nonblock nontext clip_frame colelem placeholder" data-placeholder-for="u1231_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1083-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1247-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1077-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1265-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1079-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1289-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1080-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1301-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1081-4_content"><!-- placeholder node --></span>
-    <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u1082-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="660" data-content-below-spacer="20"></div>
-   </div>
-  </div>
-  <div class="breakpoint" id="bp_320" data-max-width="320"><!-- responsive breakpoint node -->
-   <div class="clearfix temp_no_id" data-orig-id="page"><!-- column -->
-    <a class="nonblock nontext clip_frame colelem temp_no_id" href="program-selector.html" data-orig-id="u1231"><!-- svg --><img class="svg temp_no_id temp_no_img_src" data-orig-src="images/left-arrow.svg?crc=391656077" width="38" height="38" alt="" data-mu-svgfallback="images/left%20arrow_poster_.png?crc=184332363" data-orig-id="u1227" src="images/blank.gif?crc=4208392903"/></a>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1083-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1247-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1077-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1265-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1079-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1289-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1080-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="u1301-4_content"><!-- placeholder node --></span>
-    <span class="clearfix colelem placeholder" data-placeholder-for="pu1081-4_content"><!-- placeholder node --></span>
-    <span class="rounded-corners clearfix colelem placeholder" data-placeholder-for="u1082-4_content"><!-- placeholder node --></span>
-    <div class="verticalspacer" data-offset-top="581" data-content-above-spacer="581" data-content-below-spacer="102"></div>
    </div>
   </div>
   <!-- Other scripts -->
