--- a/data/program-selector.html
+++ b/data/program-selector.html
@@ -30,25 +30,37 @@
     <a class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u888-4" href="master.html" data-content-guid="u888-4_content"><!-- content --><p id="u888-2">MASTER</p></a>
     <a class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u987-4" href="global-settings.html" data-content-guid="u987-4_content"><!-- content --><p id="u987-2">GLOBAL SETTINGS</p></a>
 
-    <div class="clearfix colelem shared_content" id="u999-4" data-content-guid="u999-4_content"><!-- content -->
+    <!--<div class="clearfix colelem shared_content" id="u999-4" data-content-guid="u999-4_content">
       <p id="u999-2">SYSTEM STATUS</p>
-      <div style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4"><!-- content -->
+      <div style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4">
           <p>Mode: </p>
           <p id="status_mode">mode_val</p>
       </div>
-      <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1201-4"><!-- content -->
+      <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1201-4">
         <p>Completed laps: </p>
        <p id="status_completed_laps">laps_val</p>
       </div>
-      <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4"><!-- content -->
+      <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4">
         <p>Current Position: </p>
        <p id="status_position">position_val</p>
       </div>
-      <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4"><!-- content -->
+      <div  style="display: flex" class="nonblock nontext rounded-corners clearfix colelem shared_content" id="u1200-4">
         <p>System Status: </p>
        <p id="status_system_status">system status_val</p>
       </div>
-     </div>
+     </div> 
+    -->
+    
+    <div class="clearfix colelem shared_content" id="u999-4" data-content-guid="u999-4_content">
+      <p id="u999-2">SYSTEM STATUS</p>
+     <table>
+       <tr><th>Parameter        </th><th>Value</th></tr>
+       <tr><td>Mode             </td><td><p id="status_mode">mode_val                   </p></td></tr>
+       <tr><td>Completed laps   </td><td><p id="status_mode">laps_val                   </p></td></tr>
+       <tr><td>Current Position </td><td><p id="status_mode">position_val               </p></td></tr>
+       <tr><td>System Status    </td><td><p id="status_system_status">system_status_val </p></td></tr>
+     </table>
+    </div>
 
 
     <div class="verticalspacer" data-offset-top="660" data-content-above-spacer="660" data-content-below-spacer="18"></div>
