Fix incorrect copy-pasted IDs

--- a/data/program-selector.html
+++ b/data/program-selector.html
@@ -56,8 +56,8 @@
      <table>
        <tr><th>Parameter        </th><th>Value</th></tr>
        <tr><td>Mode             </td><td><p id="status_mode">mode_val                   </p></td></tr>
-       <tr><td>Completed laps   </td><td><p id="status_mode">laps_val                   </p></td></tr>
-       <tr><td>Current Position </td><td><p id="status_mode">position_val               </p></td></tr>
+       <tr><td>Completed laps   </td><td><p id="status_completed_laps">laps_val</p></td></tr>
+       <tr><td>Current Position </td><td><p id="status_position">position_val</p></td></tr>
        <tr><td>System Status    </td><td><p id="status_system_status">system_status_val </p></td></tr>
      </table>
     </div>
