--- a/data/novice.html
+++ b/data/novice.html
@@ -30,7 +30,7 @@
         </div>
         <div class="grpelem value_input width_half offset_half">
           <p>
-            <input class="grpelem width_half" type="number" id="mode_speed">
+            <input class="grpelem width_half" type="number" id="mode_speed" onchange="handle_speed_change()">
           </p>
         </div>
       </div>
