Make sure Save button is disabled on mode page load

--- a/data/novice.html
+++ b/data/novice.html
@@ -7,7 +7,7 @@
 
   <title>Novice</title>
   <script type="text/javascript" src="scripts/jquery-3.6.0.min.js"></script>
-  <script type="text/javascript" src="scripts/mode-settings.js"></script>
+  <script type="text/javascript" src="scripts/mode-settings.js" defer></script>
   <link rel="stylesheet" type="text/css" href="css/site_global.css" />
   <link rel="stylesheet" type="text/css" href="css/mode.css" id="pagesheet" />
 </head>
